# http-client-auth

./: .gitignore  .travis.yml  LICENSE  README.md  README.org  http-client-auth.cabal
src/Network/HTTP/Client/: Auth.hs
test/: DocTest.hs  HLint.hs  Haddock.hs
